fixes to readme's

--- a/content/materials/prework/index.html
+++ b/content/materials/prework/index.html
@@ -32,13 +32,15 @@ weight: 1
 <ul>
 <li><p>A recent version of R (&gt;=4.0), which is available for free at <a href="https://cloud.r-project.org/" class="uri">https://cloud.r-project.org/</a></p></li>
 <li><p>A recent version of RStudio Desktop (&gt;=1.4), available for free (<a href="https://www.rstudio.com/products/rstudio/download/#download">RStudio Desktop Open Source License</a>)</p></li>
-<li><p>The R packages we will use, which you can install by connecting to the internet, opening RStudio, and running at the command line:</p>
-<pre class="r"><code>install.packages(c(&quot;rmarkdown&quot;, &quot;devtools&quot;, &quot;usethis&quot;, &quot;here&quot;, 
-                   &quot;tidyverse&quot;, &quot;xaringan&quot;, &quot;flexdashboard&quot;, 
-                   &quot;distill&quot;, &quot;bookdown&quot;, &quot;blogdown&quot;,
-                   &quot;glue&quot;, &quot;wesanderson&quot;))</code></pre></li>
+<li><p>The R packages we will use, which you can install by connecting to the internet, opening RStudio, and running at the command line:</p></li>
 </ul></li>
-<li><p>Don’t forget your power cord!</p></li>
+</ol>
+<pre class="r"><code>        install.packages(c(&quot;rmarkdown&quot;, &quot;devtools&quot;, &quot;usethis&quot;, &quot;here&quot;, 
+                           &quot;tidyverse&quot;, &quot;xaringan&quot;, &quot;flexdashboard&quot;, 
+                           &quot;distill&quot;, &quot;bookdown&quot;, &quot;blogdown&quot;,
+                           &quot;glue&quot;, &quot;wesanderson&quot;))</code></pre>
+<ol style="list-style-type: decimal">
+<li>Don’t forget your power cord!</li>
 </ol>
 <p>On the day of the workshop, I’ll provide you with an RStudio Cloud project that contains all of the course materials. We will use the software listed above only as an important backup should there be problems with the on-site internet connection.</p>
 <p><a href="/slides/00-loop.html">View slides</a> <em>(note: these slides are intentionally a loop and will play on autoadvance)</em></p>
