--- a/static/slides/00-loop.html
+++ b/static/slides/00-loop.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Welcome</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2019-09-30" />
+    <meta name="author" content="Ian T. Adams" />
+    <meta name="date" content="2021-01-20" />
+    <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <script>
     // Adapted from https://github.com/gnab/remark/wiki/Configuration#using-javascript-to-create-a-continuously-looping-slideshow
@@ -45,11 +46,11 @@ class: title-slide, center, middle
 
 # Welcome
 
-## Young Statisticians Conference 2019
+## RMarkdown for Politics and Policy
 
-### Alison Hill &amp;#183; RStudio
+### Ian T. Adams &amp;#183; RStudio
 
-#### [https://ysc-rmarkdown.netlify.com/](https://ysc-rmarkdown.netlify.com/)
+#### [https://ita-rmarkdown.netlify.app/](https://ita-rmarkdown.netlify.app/)
 
 ???
 
@@ -62,7 +63,7 @@ class: middle, center
 
 Wifi network name  
 
-Functions
+UU Guest
 
 ]
 
@@ -71,7 +72,7 @@ Functions
 
 Wifi password
 
-Stata_16
+None Required, please follow prompts
 
 ]
 
@@ -99,7 +100,7 @@ class: center, middle
 # Do this! 👇
 
 # https://commonmark.org/help/tutorial/
-
+ 
 ---
 
 
@@ -161,6 +162,7 @@ class: center, middle
 &lt;img src="images/rmarkdown_wizards.png" alt="Artwork by @allison_horst" width="5303" /&gt;
 &lt;p class="caption"&gt;Artwork by @allison_horst&lt;/p&gt;
 &lt;/div&gt;
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -210,9 +212,25 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
     deleted = true;
   });
-})();</script>
-
-<script>
+})();
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
 (function() {
   var links = document.getElementsByTagName('a');
   for (var i = 0; i < links.length; i++) {
@@ -221,7 +239,23 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
   }
 })();
-</script>
+// adds .remark-code-has-line-highlighted class to <pre> parent elements
+// of code chunks containing highlighted lines with class .remark-code-line-highlighted
+(function(d) {
+  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
+  const preParents = [];
+  const findPreParent = function(line, p = 0) {
+    if (p > 1) return null; // traverse up no further than grandparent
+    const el = line.parentElement;
+    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
+  };
+
+  for (let line of hlines) {
+    let pre = findPreParent(line);
+    if (pre && !preParents.includes(pre)) preParents.push(pre);
+  }
+  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
+})(document);</script>
 
 <script>
 slideshow._releaseMath = function(el) {
