--- a/static/slides/04-collections.html
+++ b/static/slides/04-collections.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
+<html lang="" xml:lang="">
   <head>
     <title>Curating Collections</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2019-09-30" />
+    <meta name="author" content="Ian T. Adams" />
+    <meta name="date" content="2021-01-20" />
+    <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
     <script src="libs/countdown/countdown.js"></script>
@@ -30,16 +31,16 @@ class: title-slide, center, middle
 
 # Curating Collections
 
-## Young Statisticians Conference 2019
+## Rmarkdown for Politics and Policy
 
-### Alison Hill &amp;#183; RStudio
+### Ian T. Adams &amp;#183; RStudio
 
-#### [https://ysc-rmarkdown.netlify.com/](https://ysc-rmarkdown.netlify.com/)
+#### [https://ita-rmarkdown.netlify.app/](https://ita-rmarkdown.netlify.app/)
 
 ---
 layout: true
 
-&lt;div class="my-footer"&gt;&lt;span&gt;https://ysc-rmarkdown.netlify.com/&lt;/span&gt;&lt;/div&gt;
+&lt;div class="my-footer"&gt;&lt;span&gt;https://ita-rmarkdown.netlify.app/&lt;/span&gt;&lt;/div&gt;
 
 ---
 name: blogdown
@@ -157,9 +158,12 @@ class: inverse, middle, center
 
 # ✨ Quiz! ✨
 
-<div class="countdown" id="timer_5d91334e" style="right:0;bottom:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+
+```{=html}
+&lt;div class="countdown" id="timer_60087a0b" style="right:0;bottom:0;" data-warnwhen="0"&gt;
+&lt;code class="countdown-time"&gt;&lt;span class="countdown-digits minutes"&gt;02&lt;/span&gt;&lt;span class="countdown-digits colon"&gt;:&lt;/span&gt;&lt;span class="countdown-digits seconds"&gt;00&lt;/span&gt;&lt;/code&gt;
+&lt;/div&gt;
+```
 
 
 For &lt;i class="fab fa-r-project"&gt;&lt;/i&gt; users, why `blogdown` instead of [WordPress, Tumblr, Medium.com, Blogger.com]?
@@ -306,9 +310,12 @@ class: your-turn
 Find and edit the file `content/authors/admin/index.md`. If you want, add an `avatar.jpg` file too.
 
 
-<div class="countdown" id="timer_5d9133b9" style="right:0;bottom:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+
+```{=html}
+&lt;div class="countdown" id="timer_60087bce" style="right:0;bottom:0;" data-warnwhen="0"&gt;
+&lt;code class="countdown-time"&gt;&lt;span class="countdown-digits minutes"&gt;05&lt;/span&gt;&lt;span class="countdown-digits colon"&gt;:&lt;/span&gt;&lt;span class="countdown-digits seconds"&gt;00&lt;/span&gt;&lt;/code&gt;
+&lt;/div&gt;
+```
 
 ---
 class: live-code
@@ -324,9 +331,12 @@ Let's start with the last thing you typically do to your home- decorate.
 
 Open up the file `config/_default/params.toml`. Play with any of these configurations, but especially fonts/themes. You can see the ones designed by [Desirée De Leon](http://desiree.rbind.io/) in the `data/` folder.
 
-<div class="countdown" id="timer_5d913504" style="right:0;bottom:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+
+```{=html}
+&lt;div class="countdown" id="timer_60087a34" style="right:0;bottom:0;" data-warnwhen="0"&gt;
+&lt;code class="countdown-time"&gt;&lt;span class="countdown-digits minutes"&gt;05&lt;/span&gt;&lt;span class="countdown-digits colon"&gt;:&lt;/span&gt;&lt;span class="countdown-digits seconds"&gt;00&lt;/span&gt;&lt;/code&gt;
+&lt;/div&gt;
+```
     
 ---
 background-image: url(images/hugo/1.png)
@@ -386,9 +396,12 @@ Which urls do you predict to work? Do they?
 
 If this was easy, which are links are list layouts? Which are a single layouts?
 
-<div class="countdown" id="timer_5d913206" style="right:0;bottom:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+
+```{=html}
+&lt;div class="countdown" id="timer_60087aed" style="right:0;bottom:0;" data-warnwhen="0"&gt;
+&lt;code class="countdown-time"&gt;&lt;span class="countdown-digits minutes"&gt;05&lt;/span&gt;&lt;span class="countdown-digits colon"&gt;:&lt;/span&gt;&lt;span class="countdown-digits seconds"&gt;00&lt;/span&gt;&lt;/code&gt;
+&lt;/div&gt;
+```
 
 ---
 class: your-turn
@@ -399,9 +412,12 @@ Add new content to your `post/` room. Add series 9!
 
 If this was easy, try adding xaringan slides to `static/slides/`, and link to them in posts.
 
-<div class="countdown" id="timer_5d9135a9" style="right:0;bottom:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+
+```{=html}
+&lt;div class="countdown" id="timer_60087a0e" style="right:0;bottom:0;" data-warnwhen="0"&gt;
+&lt;code class="countdown-time"&gt;&lt;span class="countdown-digits minutes"&gt;05&lt;/span&gt;&lt;span class="countdown-digits colon"&gt;:&lt;/span&gt;&lt;span class="countdown-digits seconds"&gt;00&lt;/span&gt;&lt;/code&gt;
+&lt;/div&gt;
+```
 
 ---
 background-image: url(images/hugo/13.png)
@@ -423,9 +439,12 @@ Play with your landing page (`hero.md` text + images).
 
 If this was easy, try activating other widgets; or creating a separate widget page.
 
-<div class="countdown" id="timer_5d9134de" style="right:0;bottom:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+
+```{=html}
+&lt;div class="countdown" id="timer_60087aa0" style="right:0;bottom:0;" data-warnwhen="0"&gt;
+&lt;code class="countdown-time"&gt;&lt;span class="countdown-digits minutes"&gt;05&lt;/span&gt;&lt;span class="countdown-digits colon"&gt;:&lt;/span&gt;&lt;span class="countdown-digits seconds"&gt;00&lt;/span&gt;&lt;/code&gt;
+&lt;/div&gt;
+```
 
 
 ---
@@ -434,9 +453,15 @@ class: middle, center, inverse
 
 # Time to wrap-up!
 
-<div class="countdown blink-colon noupdate-15" id="timer_5d91346a" style="right:0;bottom:0;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+
+```{=html}
+&lt;div class="countdown blink-colon noupdate-15" id="timer_60087d00" style="right:0;bottom:0;" data-warnwhen="0"&gt;
+&lt;code class="countdown-time"&gt;&lt;span class="countdown-digits minutes"&gt;15&lt;/span&gt;&lt;span class="countdown-digits colon"&gt;:&lt;/span&gt;&lt;span class="countdown-digits seconds"&gt;00&lt;/span&gt;&lt;/code&gt;
+&lt;/div&gt;
+```
+
+
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
@@ -487,9 +512,25 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
     deleted = true;
   });
-})();</script>
-
-<script>
+})();
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
 (function() {
   var links = document.getElementsByTagName('a');
   for (var i = 0; i < links.length; i++) {
@@ -498,7 +539,23 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     }
   }
 })();
-</script>
+// adds .remark-code-has-line-highlighted class to <pre> parent elements
+// of code chunks containing highlighted lines with class .remark-code-line-highlighted
+(function(d) {
+  const hlines = d.querySelectorAll('.remark-code-line-highlighted');
+  const preParents = [];
+  const findPreParent = function(line, p = 0) {
+    if (p > 1) return null; // traverse up no further than grandparent
+    const el = line.parentElement;
+    return el.tagName === "PRE" ? el : findPreParent(el, ++p);
+  };
+
+  for (let line of hlines) {
+    let pre = findPreParent(line);
+    if (pre && !preParents.includes(pre)) preParents.push(pre);
+  }
+  preParents.forEach(p => p.classList.add("remark-code-has-line-highlighted"));
+})(document);</script>
 
 <script>
 slideshow._releaseMath = function(el) {
